{
    "name": "Player",
    "maps": [
        {
            "name": "Player",
            "id": "5e156682-3eeb-4a52-b5e6-4e9d1011d8d3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dc28d9c0-f372-4efc-aa9c-caed0945d285",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "be9bfb8a-3e3d-40d7-aa41-ba211e505ccf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveMouse",
                    "type": "Value",
                    "id": "4774d466-6a67-4049-8a17-df475fce1325",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e98e3892-4435-488c-ab02-106bf59beef0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillInvocation",
                    "type": "Button",
                    "id": "df4d672b-d259-49fc-8e50-27ef90801897",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UltimateAttack",
                    "type": "Button",
                    "id": "50bcabf4-89d0-4593-ba3d-1d16f84a456e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUpItem",
                    "type": "Button",
                    "id": "0e71a7ff-49ea-410b-8791-7f33df032a8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dcaaff1b-2f67-46a3-816a-7c11010936aa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "30a21f4f-a45f-46f9-8e72-df996b307c7d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c4765c1f-3edd-4534-9883-8f833d6f5700",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "de3243cd-a48f-4822-9d0f-0f37e3c08ec9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "01f9fba9-3ded-40e2-a9ff-eb4a9de8a3d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da881317-88eb-4d1d-add5-e5ab53fc21bf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "30fa5418-8459-4041-932b-ccbec1ed2995",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "MoveMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20a9239c-5b96-4d50-997d-a9188aaa7474",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "605cbf79-5375-4b1b-ba70-12df682ff19a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillInvocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67f06261-e627-42c6-b9f3-7e9bd26e5ee3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UltimateAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e6ee296-4f13-453b-b6d3-5ae76447629d",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}